# MARA

./: README.md  run_mara.bat  run_mara.sh
backend/: app.py  chunks.txt  main.py  pyproject.toml  requirements.txt  sample.docx
backend/core/: config.py
backend/embeddings/: embedder.py
backend/ingestion/: docx_loader.py  pdf_loader.py  url_loader.py
backend/processing/: chunker.py  cleaner.py
backend/retrieval/: retriever.py
backend/security/: url_sanitizer.py
backend/vector_store/: faiss_store.py
